tests/snapshots/examples_fixtures/type_system__failing__72_hm_match_known_type_compile_mismatch.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/72_hm_match_known_type_compile_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: Redundant Match Arm

this arm is unreachable — earlier arms already cover it

  examples/type_system/failing/72_hm_match_known_type_compile_mismatch.flx:9:9
  |
9 |         _ -> "maybe",
  |         ^^^^^^^^^^^^


error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `expect_int`.

  examples/type_system/failing/72_hm_match_known_type_compile_mismatch.flx:14:32
   |
 1 | fn expect_int(x: Int) -> Int {
   | ---------------------------- `expect_int` expects `Int` as the 1st parameter
 2 |     x
 3 | }
... |
12 | 
13 | fn main() -> Unit with IO {
14 |     print(to_string(expect_int(choose(true))))
   |                                ^^^^^^^^^^^^
   |                                ------------ this argument has type `String`

Note:
  expected argument type: Int
  found argument type: String
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `Int` value as the 1st argument.

Found 1 error and 1 warning.
== stdout ==
<not executed>
